--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\New folder\My-Cv\images\imageonline-co-resizedimage.jpg" alt="My-img"></td>
+        <td><img src="images\imageonline-co-resizedimage.jpg" alt="My-img"></td>
         <td>  <h1>Akarshan kumar</h1>
           <p>I am from <strong><a href="https://galgotiacollege.edu/">Galgotias college of engg & tech</a></strong></p>
           <p>I am an <em>ios</em> and <em>web developer</em></p>
